Updated the document title

--- a/homework/index.html
+++ b/homework/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Weather app</title>
+    <title>Awesome weather app</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -40,9 +40,9 @@
               <img src="images/sunny.png" alt="sunny icon" width="180px" />
               <div class="temperature">
                 <span id="temp"></span> <a href="#" id="celsius">°C</a> |
-                <a href="#" id="fahrenheit">°F</a> <br /><span id="condition"
-                  ></span
-                >
+                <a href="#" id="fahrenheit">°F</a> <br /><span
+                  id="condition"
+                ></span>
               </div>
             </div>
           </div>
