--- a/index.html
+++ b/index.html
@@ -235,7 +235,10 @@
       </div>
       <div class="footer">
         <p>
-          <a href="https://github.com/LucienPca/Weather-app" target="_blank"
+          <a
+            href="https://github.com/LucienPca/Weather-app"
+            target="_blank"
+            class="footer-link"
             >Open-source code</a
           >
           by Lucian Puca
