Added weather icon API support and resized all icon PNGs

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 
             <div class="weather">
               <img
-                src="images/sunny.png"
+                src="images/01d.png"
                 alt="sunny icon"
                 width="180px"
                 class="img-fluid"
+                id="weatherIcon"
               />
               <div class="temperature">
                 <span id="temp"></span> <a href="#" id="celsius">°C</a> |
@@ -85,7 +86,7 @@
                 <div class="card border-0">
                   <div class="next-day">
                     <img
-                      src="images/sunny.png"
+                      src="images/01d.png"
                       alt="sunny icon"
                       width="50px"
                       class="small-icon"
@@ -104,7 +105,7 @@
                 <div class="card border-0">
                   <div class="other-days">
                     <img
-                      src="images/sunny_cloud.png"
+                      src="images/02d.png"
                       alt="sunny icon"
                       width="50px"
                       class="small-icon"
@@ -123,7 +124,7 @@
                 <div class="card border-0">
                   <div class="other-days">
                     <img
-                      src="images/cloudy.png"
+                      src="images/03d.png"
                       alt="sunny icon"
                       width="50px"
                       class="small-icon"
@@ -142,7 +143,7 @@
                 <div class="card border-0">
                   <div class="other-days">
                     <img
-                      src="images/rain.png"
+                      src="images/04d.png"
                       alt="sunny icon"
                       width="50px"
                       class="small-icon"
@@ -161,7 +162,7 @@
                 <div class="card border-0">
                   <div class="other-days">
                     <img
-                      src="images/storm.png"
+                      src="images/09d.png"
                       alt="sunny icon"
                       width="50px"
                       class="small-icon"
