Added classes to the following week days & temp

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="weather">
               <img
-                src="images/01d.png"
+                src=""
                 alt="sunny icon"
                 width="180px"
                 class="img-fluid"
@@ -92,9 +92,9 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p>
+                    <p class="second-day">
                       Tue <br />
-                      28° C
+                      <span class="second-day-temp">28° C</span>
                     </p>
                   </div>
                 </div>
@@ -111,9 +111,9 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p>
+                    <p class="third-day">
                       Wed <br />
-                      28° C
+                      <span class="third-day-temp">28° C</span>
                     </p>
                   </div>
                 </div>
@@ -130,9 +130,9 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p>
+                    <p class="fourth-day">
                       Thu <br />
-                      28° C
+                      <span class="fourth-day-temp">28° C</span>
                     </p>
                   </div>
                 </div>
@@ -149,9 +149,9 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p>
+                    <p class="fifth-day">
                       Fry <br />
-                      28° C
+                      <span class="fifth-day-temp">28° C</span>
                     </p>
                   </div>
                 </div>
@@ -168,9 +168,9 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p>
+                    <p class="sixth-day">
                       Sat <br />
-                      28° C
+                      <span class="fifth-day-temp">28° C</span>
                     </p>
                   </div>
                 </div>
