separated the temperature classes from the days in the 'next days forecast'

--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p class="second-day">
-                      Tue <br />
-                      <span class="second-day-temp">28° C</span>
-                    </p>
+                    <p class="second-day">Tue</p>
+                    <span class="second-day-temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -111,10 +109,8 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p class="third-day">
-                      Wed <br />
-                      <span class="third-day-temp">28° C</span>
-                    </p>
+                    <p class="third-day">Wed</p>
+                    <span class="third-day-temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -130,10 +126,8 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p class="fourth-day">
-                      Thu <br />
-                      <span class="fourth-day-temp">28° C</span>
-                    </p>
+                    <p class="fourth-day">Thu</p>
+                    <span class="fourth-day-temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -149,10 +143,8 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p class="fifth-day">
-                      Fry <br />
-                      <span class="fifth-day-temp">28° C</span>
-                    </p>
+                    <p class="fifth-day">Fry</p>
+                    <span class="fifth-day-temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -168,10 +160,8 @@
                       class="small-icon"
                       class="img-fluid"
                     />
-                    <p class="sixth-day">
-                      Sat <br />
-                      <span class="fifth-day-temp">28° C</span>
-                    </p>
+                    <p class="sixth-day">Sat</p>
+                    <span class="fifth-day-temp">28° C</span>
                   </div>
                 </div>
               </div>
