--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                       id="search-field"
                     /><input
                       type="submit"
+                      value="Search"
                       class="input-search"
                       id="search-button"
                     />
