--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 id="weatherIcon"
               />
               <div class="temperature">
-                <span id="temp"></span> <a href="#" id="celsius">°C</a> |
+                <span id="temp"></span> 
+                <a href="#" id="celsius">°C</a> |
                 <a href="#" id="fahrenheit">°F</a> <br /><span
                   id="condition"
                 ></span>
