Added 1 extra forecast day card
Adjusted the styling of the whole page since adding 1 extra card threw the design off

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <!-- First panel -->
             <div class="row justify-content-center">
-              <div class="col-sm-2">
+              <div class="col-sm-1">
                 <div class="card border-0">
                   <div class="next-day">
                     <img
@@ -94,13 +94,13 @@
                       class="img-fluid"
                     />
                     <p class="second-day">Tue</p>
-                    <span class="second-day-temp">28° C</span>
+                    <span id="secondDayTemp">28° C</span>
                   </div>
                 </div>
               </div>
 
               <!-- Second panel -->
-              <div class="col-sm-2">
+              <div class="col-sm-1">
                 <div class="card border-0">
                   <div class="other-days">
                     <img
@@ -111,13 +111,13 @@
                       class="img-fluid"
                     />
                     <p class="third-day">Wed</p>
-                    <span class="third-day-temp">28° C</span>
+                    <span id="thirdDayTemp">28° C</span>
                   </div>
                 </div>
               </div>
 
               <!-- Third panel -->
-              <div class="col-sm-2">
+              <div class="col-sm-1">
                 <div class="card border-0">
                   <div class="other-days">
                     <img
@@ -128,13 +128,13 @@
                       class="img-fluid"
                     />
                     <p class="fourth-day">Thu</p>
-                    <span class="fourth-day-temp">28° C</span>
+                    <span id="fourthDayTemp">28° C</span>
                   </div>
                 </div>
               </div>
 
               <!-- Fourth panel -->
-              <div class="col-sm-2">
+              <div class="col-sm-1">
                 <div class="card border-0">
                   <div class="other-days">
                     <img
@@ -145,13 +145,13 @@
                       class="img-fluid"
                     />
                     <p class="fifth-day">Fry</p>
-                    <span class="fifth-day-temp">28° C</span>
+                    <span id="fifthDayTemp">28° C</span>
                   </div>
                 </div>
               </div>
 
               <!-- Fifth panel -->
-              <div class="col-sm-2">
+              <div class="col-sm-1">
                 <div class="card border-0">
                   <div class="other-days">
                     <img
@@ -162,7 +162,24 @@
                       class="img-fluid"
                     />
                     <p class="sixth-day">Sat</p>
-                    <span class="fifth-day-temp">28° C</span>
+                    <span id="sixthDayTemp">28° C</span>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Sixth panel -->
+              <div class="col-sm-1">
+                <div class="card border-0">
+                  <div class="other-days">
+                    <img
+                      src="images/09d.png"
+                      alt="sunny icon"
+                      width="50px"
+                      class="small-icon"
+                      class="img-fluid"
+                    />
+                    <p class="seventh-day">Sun</p>
+                    <span id="seventhDayTemp">28° C</span>
                   </div>
                 </div>
               </div>
