Create JS loops for the forecast temperature and icons

--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
                       width="50px"
                       class="small-icon"
                       class="img-fluid"
+                      id="day1Icon"
                     />
                     <p class="second-day">Tue</p>
-                    <span id="secondDayTemp">28° C</span>
+                    <span id="day1Temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -109,9 +110,10 @@
                       width="50px"
                       class="small-icon"
                       class="img-fluid"
+                      id="day2Icon"
                     />
                     <p class="third-day">Wed</p>
-                    <span id="thirdDayTemp">28° C</span>
+                    <span id="day2Temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -126,9 +128,10 @@
                       width="50px"
                       class="small-icon"
                       class="img-fluid"
+                      id="day3Icon"
                     />
                     <p class="fourth-day">Thu</p>
-                    <span id="fourthDayTemp">28° C</span>
+                    <span id="day3Temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -143,9 +146,10 @@
                       width="50px"
                       class="small-icon"
                       class="img-fluid"
+                      id="day4Icon"
                     />
                     <p class="fifth-day">Fry</p>
-                    <span id="fifthDayTemp">28° C</span>
+                    <span id="day4Temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -160,9 +164,10 @@
                       width="50px"
                       class="small-icon"
                       class="img-fluid"
+                      id="day5Icon"
                     />
                     <p class="sixth-day">Sat</p>
-                    <span id="sixthDayTemp">28° C</span>
+                    <span id="day5Temp">28° C</span>
                   </div>
                 </div>
               </div>
@@ -177,9 +182,10 @@
                       width="50px"
                       class="small-icon"
                       class="img-fluid"
+                      id="day6Icon"
                     />
                     <p class="seventh-day">Sun</p>
-                    <span id="seventhDayTemp">28° C</span>
+                    <span id="day6Temp">28° C</span>
                   </div>
                 </div>
               </div>
