Added JS loops to convert Unix Timestamps to weekday strings

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                       class="img-fluid"
                       id="day1Icon"
                     />
-                    <p class="second-day">Tue</p>
+                    <p class="second-day" id="day1Name">Tue</p>
                     <span id="day1Temp">28° C</span>
                   </div>
                 </div>
@@ -112,7 +112,7 @@
                       class="img-fluid"
                       id="day2Icon"
                     />
-                    <p class="third-day">Wed</p>
+                    <p class="third-day" id="day2Name">Wed</p>
                     <span id="day2Temp">28° C</span>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       class="img-fluid"
                       id="day3Icon"
                     />
-                    <p class="fourth-day">Thu</p>
+                    <p class="fourth-day" id="day3Name">Thu</p>
                     <span id="day3Temp">28° C</span>
                   </div>
                 </div>
@@ -148,7 +148,7 @@
                       class="img-fluid"
                       id="day4Icon"
                     />
-                    <p class="fifth-day">Fry</p>
+                    <p class="fifth-day" id="day4Name">Fry</p>
                     <span id="day4Temp">28° C</span>
                   </div>
                 </div>
@@ -166,7 +166,7 @@
                       class="img-fluid"
                       id="day5Icon"
                     />
-                    <p class="sixth-day">Sat</p>
+                    <p class="sixth-day" id="day5Name">Sat</p>
                     <span id="day5Temp">28° C</span>
                   </div>
                 </div>
@@ -184,7 +184,7 @@
                       class="img-fluid"
                       id="day6Icon"
                     />
-                    <p class="seventh-day">Sun</p>
+                    <p class="seventh-day" id="day6Name">Sun</p>
                     <span id="day6Temp">28° C</span>
                   </div>
                 </div>
