Created a variable that changes the condition icons depending on the weather type

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="row">
         <!-- Blue box on the left -->
         <div class="col-sm-6">
-          <div class="left-box">
+          <div class="left-box" id="leftBox">
             <h1 id="week-day">Sunday</h1>
             <div class="date" id="full-date">05 February 2023, 09:45</div>
             <img
