Introduced Unsplash API that changes the images according to the form input & adding credits in the footer
Randomising the result array in JS so random photos are displayed

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             >Open-source code</a
           >
           by Lucian Puca
-        </p>
+        <span id="unsplash-credits">Photo by Annie Spratt on</span> <a href="#" class="unsplash-link">Unsplash</a></p>
       </div>
     </div>
 
