Unsplash credit link opens in a new window

--- a/index.html
+++ b/index.html
@@ -258,7 +258,9 @@
             >Open-source code</a
           >
           by Lucian Puca
-        <span id="unsplash-credits">Photo by Annie Spratt on</span> <a href="#" class="unsplash-link">Unsplash</a></p>
+          <span id="unsplash-credits">Photo by Annie Spratt on</span>
+          <a href="#" target="_blank" class="unsplash-link">Unsplash</a>
+        </p>
       </div>
     </div>
 
